--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="inner-content">
               <p>RANCON - CHALLENGE CONVENTION
             
-            - Design: <a rel="nofollow noopener" href="https://www.facebook.com/profile.php?id=100011161840929" target="_blank">Abir Mahamud</a></p>
+            - Design: <a rel="nofollow noopener" href="" target="_blank">Sharmin Shoma</a></p>
             </div>
           </div>
         </div>
