--- a/contact.html
+++ b/contact.html
@@ -257,7 +257,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="inner-content">
               <p>RANCON - CHALLENGE CONVENTION
             
-            - Design: <a rel="nofollow noopener" href="https://www.facebook.com/profile.php?id=100011161840929" target="_blank">Abir Mahamud</a></p>
+            - Design: <a rel="nofollow noopener" href="" target="_blank">Sharmin Shoma</a></p>
             </div>
           </div>
         </div>
