--- a/products.html
+++ b/products.html
@@ -230,7 +230,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="inner-content">
               <p>RANCON - CHALLENGE CONVENTION
             
-            - Design: <a rel="nofollow noopener" href="" target="_blank">Sharmin Shoma</a></p>
+            - Design: <a rel="nofollow noopener" href="https://www.linkedin.com/in/sharmin-shoma-036434178/" target="_blank">Sharmin Shoma</a></p>
             </div>
           </div>
         </div>
